; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/extr_vidsoft.c_Vdp2GetInterlaceInfo.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/extr_vidsoft.c_Vdp2GetInterlaceInfo.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@vdp2_interlace = common dso_local global i64 0, align 8
@vdp2_is_odd_frame = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @Vdp2GetInterlaceInfo(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  store i32* %1, i32** %4, align 8
  %5 = load i64, i64* @vdp2_interlace, align 8
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %16

7:                                                ; preds = %2
  %8 = load i64, i64* @vdp2_is_odd_frame, align 8
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %12

10:                                               ; preds = %7
  %11 = load i32*, i32** %3, align 8
  store i32 1, i32* %11, align 4
  br label %14

12:                                               ; preds = %7
  %13 = load i32*, i32** %3, align 8
  store i32 0, i32* %13, align 4
  br label %14

14:                                               ; preds = %12, %10
  %15 = load i32*, i32** %4, align 8
  store i32 2, i32* %15, align 4
  br label %19

16:                                               ; preds = %2
  %17 = load i32*, i32** %3, align 8
  store i32 0, i32* %17, align 4
  %18 = load i32*, i32** %4, align 8
  store i32 1, i32* %18, align 4
  br label %19

19:                                               ; preds = %16, %14
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
